--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
-    "morgan": "^1.9.1",
     "nodemon": "^2.0.2"
   }
 }
